--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -21,15 +21,20 @@ cabal-version:       >=1.10
 Bug-Reports:         https://github.com/snapframework/io-streams-haproxy/issues
 
 library
-  hs-source-dirs:      src
-  ghc-prof-options:    -prof -auto-all
-  exposed-modules:     System.IO.Streams.Network.HAProxy
-  build-depends:       base              >= 4.4 && < 4.8,
-                       attoparsec        >= 0.7 && < 0.13,
-                       bytestring        >= 0.9 && < 0.11,
-                       io-streams        >= 1.1 && < 1.2,
-                       network           >= 2.3 && < 2.6
-  default-language:    Haskell2010
+  hs-source-dirs:    src
+  ghc-prof-options:  -prof -auto-all
+  exposed-modules:   System.IO.Streams.Network.HAProxy
+  build-depends:     base              >= 4.4 && < 4.8,
+                     attoparsec        >= 0.7 && < 0.13,
+                     bytestring        >= 0.9 && < 0.11,
+                     io-streams        >= 1.1 && < 1.2,
+                     network           >= 2.3 && < 2.6,
+                     transformers      >= 0.3 && < 0.5
+  default-language:  Haskell2010
+
+  ghc-options:       -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
+                     -fno-warn-unused-do-bind
+  ghc-prof-options:  -prof -auto-all
 
 test-suite testsuite
   type:              exitcode-stdio-1.0
@@ -49,6 +54,7 @@ test-suite testsuite
                      bytestring        >= 0.9 && < 0.11,
                      io-streams        >= 1.1 && < 1.2,
                      network           >= 2.3 && < 2.6,
+                     transformers      >= 0.3 && < 0.5,
                      ------------------------------
                      HUnit                      >= 1.2      && <2,
                      test-framework             >= 0.8.0.3  && <0.9,
