Actually drop to C and use ntohs() to decode lengths (nothing portable is available in the base libs).

--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -16,7 +16,10 @@ maintainer:          greg@gregorycollins.net
 copyright:           (c) 2014 Google, Inc. and CONTRIBUTORS
 category:            Network, IO-Streams
 build-type:          Simple
-extra-source-files:  CONTRIBUTORS
+extra-source-files:
+  CONTRIBUTORS,
+  cbits/byteorder.c
+
 cabal-version:       >=1.10
 Bug-Reports:         https://github.com/snapframework/io-streams-haproxy/issues
 
@@ -24,6 +27,8 @@ library
   hs-source-dirs:    src
   ghc-prof-options:  -prof -auto-all
   exposed-modules:   System.IO.Streams.Network.HAProxy
+  c-sources:         cbits/byteorder.c
+
   build-depends:     base              >= 4.4 && < 4.8,
                      attoparsec        >= 0.7 && < 0.13,
                      bytestring        >= 0.9 && < 0.11,
@@ -41,6 +46,7 @@ test-suite testsuite
   hs-source-dirs:    src test
   Main-is:           TestSuite.hs
   Default-language:  Haskell2010
+  c-sources:         cbits/byteorder.c
 
   ghc-options:       -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
                      -fno-warn-unused-do-bind
