added the missing HsIoStreamsHaProxyConfig.h.in to extra-source-files
now, cabal can install the package from sdist

--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -18,6 +18,7 @@ category:            Network, IO-Streams
 build-type:          Configure
 extra-source-files:  CONTRIBUTORS,
                      cbits/byteorder.c,
+                     include/HsIoStreamsHaProxyConfig.h.in,
                      README.md,
                      configure.ac,
                      configure
