Conditional compilation for Windows
Fix build on Windows without using configure by using cabal directives. See #5
and #6.

--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -41,6 +41,9 @@ library
   ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields -threaded
                      -fno-warn-unused-do-bind
   ghc-prof-options:  -prof -auto-all
+  if os(windows)
+    cpp-options:     -DWINDOWS
+    cc-options:      -DWINDOWS
 
 test-suite testsuite
   type:              exitcode-stdio-1.0
@@ -66,3 +69,6 @@ test-suite testsuite
                      HUnit                      >= 1.2      && <2,
                      test-framework             >= 0.8.0.3  && <0.9,
                      test-framework-hunit       >= 0.2.7    && <0.4
+  if os(windows)
+    cpp-options:     -DWINDOWS
+    cc-options:      -DWINDOWS
