--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -30,12 +30,12 @@ library
   other-modules:     System.IO.Streams.Network.Internal.Address
   c-sources:         cbits/byteorder.c
 
-  build-depends:     base              >= 4.4 && < 4.9,
+  build-depends:     base              >= 4.4 && < 4.10,
                      attoparsec        >= 0.7 && < 0.14,
                      bytestring        >= 0.9 && < 0.11,
                      io-streams        >= 1.3 && < 1.4,
                      network           >= 2.3 && < 2.7,
-                     transformers      >= 0.3 && < 0.5
+                     transformers      >= 0.3 && < 0.6
   default-language:  Haskell2010
 
   ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields -threaded
@@ -54,14 +54,15 @@ test-suite testsuite
   ghc-prof-options:  -prof -auto-all
 
   Other-modules:     System.IO.Streams.Network.HAProxy,
-                     System.IO.Streams.Network.HAProxy.Tests
+                     System.IO.Streams.Network.HAProxy.Tests,
+                     System.IO.Streams.Network.Internal.Address
 
-  build-depends:     base              >= 4.4 && < 4.9,
+  build-depends:     base              >= 4.4 && < 4.10,
                      attoparsec        >= 0.7 && < 0.14,
                      bytestring        >= 0.9 && < 0.11,
                      io-streams        >= 1.3 && < 1.4,
                      network           >= 2.3 && < 2.7,
-                     transformers      >= 0.3 && < 0.5,
+                     transformers      >= 0.3 && < 0.6,
                      ------------------------------
                      HUnit                      >= 1.2      && <2,
                      test-framework             >= 0.8.0.3  && <0.9,
