--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -22,6 +22,7 @@ extra-source-files:
 
 cabal-version:       >=1.10
 Bug-Reports:         https://github.com/snapframework/io-streams-haproxy/issues
+Tested-With:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
 library
   hs-source-dirs:    src
