--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -1,5 +1,5 @@
 name:                io-streams-haproxy
-version:             1.0.0.1
+version:             1.0.0.2
 synopsis:            HAProxy protocol 1.5 support for io-streams
 
 description: HAProxy protocol version 1.5 support (see
@@ -38,7 +38,7 @@ library
   build-depends:     base              >= 4.5 && < 4.11,
                      attoparsec        >= 0.7 && < 0.14,
                      bytestring        >= 0.9 && < 0.11,
-                     io-streams        >= 1.3 && < 1.5,
+                     io-streams        >= 1.3 && < 1.6,
                      network           >= 2.3 && < 2.7,
                      transformers      >= 0.3 && < 0.6
   default-language:  Haskell2010
@@ -56,7 +56,7 @@ test-suite testsuite
   Default-language:  Haskell2010
   c-sources:         cbits/byteorder.c
 
-  ghc-options:       -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded
+  ghc-options:       -Wall -fwarn-tabs -funbox-strict-fields -threaded
                      -fno-warn-unused-do-bind
 
   Other-modules:     System.IO.Streams.Network.HAProxy,
