--- a/io-streams-haproxy.cabal
+++ b/io-streams-haproxy.cabal
@@ -23,7 +23,8 @@ extra-source-files:
 cabal-version:       >=1.10
 Bug-Reports:         https://github.com/snapframework/io-streams-haproxy/issues
 Tested-With:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3,
-                     GHC == 8.0.1, GHC == 8.2.1, GHC == 8.4.3, GHC == 8.6.1, GHC == 8.8.1
+                     GHC == 8.0.1, GHC == 8.2.1, GHC == 8.4.3, GHC == 8.6.1,
+                     GHC == 8.8.3, GHC == 8.10.1
 
 source-repository head
   type:     git
