Skip tests on Windows
The following tests fail:
```
  test/blackbox: [Failed]
ERROR: user error (timeout)
  test/blackbox_local: [Failed]
ERROR: user error (timeout)
```

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
         run: cabal build all
 
       - name: Test
+        if: matrix.os != 'windows-latest'
         run: cabal test all
 
       - name: Documentation
