--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,15 +34,16 @@ jobs:
           - "9.2"
           - "9.4"
           - "9.6"
+          - "9.8"
         include:
-          - { os: macOS-latest,   ghc: "9.6" }
-          - { os: windows-latest, ghc: "9.6" }
+          - { os: macOS-latest,   ghc: "9.8" }
+          - { os: windows-latest, ghc: "9.8" }
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Set up GHC ${{ matrix.ghc-version }}
-        uses: haskell/actions/setup@v2
+        uses: haskell-actions/setup@v2
         id: setup
         with:
           ghc-version: ${{ matrix.ghc }}
@@ -99,7 +100,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - uses: haskell/actions/setup@v2
+      - uses: haskell-actions/setup@v2
         name: Setup Haskell Stack
         with:
           ghc-version: ${{ matrix.ghc }}
